--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "ts-node-dev ./src/index.ts" 
+    "dev": "ts-node-dev ./src/index.ts"
   },
   "author": "Giovani Tizzo",
   "license": "ISC",
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.45.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
