--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Giovani Tizzo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/http-status-codes": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
